--- a/package.json
+++ b/package.json
@@ -21,41 +21,52 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@glcap-forks/typegraphql-nestjs": "^0.5.0",
+    "@nestjs/apollo": "^10.0.6",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/core": "^8.4.0",
+    "@nestjs/graphql": "^10.0.6",
+    "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "@prisma/client": "^3.10.0",
+    "@types/graphql-fields": "^1.3.4",
+    "apollo-server-express": "^3.6.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "graphql": "15.5.1",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.15.0",
     "prisma": "^3.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "rxjs": "^7.5.4",
+    "swagger-ui-express": "^4.3.0",
+    "tslib": "^2.3.1",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^8.2.2",
+    "@nestjs/schematics": "^8.0.7",
+    "@nestjs/testing": "^8.4.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.8",
+    "ts-node": "^10.6.0",
+    "tsconfig-paths": "^3.12.0",
+    "typegraphql-prisma": "^0.19.1",
+    "typescript": "^4.6.2"
   },
   "jest": {
     "moduleFileExtensions": [
