--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@glcap-forks/typegraphql-nestjs": "^0.5.0",
@@ -75,8 +74,8 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "roots": ["src", "test"],
+    "testRegex": ".*\\.(e2e-)?spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
