--- a/package.json
+++ b/package.json
@@ -20,28 +20,22 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@glcap-forks/typegraphql-nestjs": "^0.5.0",
     "@nestjs/apollo": "^10.0.6",
     "@nestjs/common": "^8.4.0",
     "@nestjs/core": "^8.4.0",
-    "@nestjs/graphql": "^10.0.6",
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "@prisma/client": "^3.10.0",
-    "@types/graphql-fields": "^1.3.4",
+    "ajv": "^8.11.0",
     "apollo-server-express": "^3.6.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "graphql": "15.5.1",
-    "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.15.0",
     "prisma": "^3.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.4",
     "swagger-ui-express": "^4.3.0",
-    "tslib": "^2.3.1",
-    "type-graphql": "^1.1.1"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.2",
@@ -65,7 +59,6 @@
     "ts-loader": "^9.2.8",
     "ts-node": "^10.6.0",
     "tsconfig-paths": "^3.12.0",
-    "typegraphql-prisma": "^0.19.1",
     "typescript": "^4.6.2"
   },
   "jest": {
@@ -74,7 +67,10 @@
       "json",
       "ts"
     ],
-    "roots": ["src", "test"],
+    "roots": [
+      "src",
+      "test"
+    ],
     "testRegex": ".*\\.(e2e-)?spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
